# docgraph-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/specs/: configuration.md  data-model.md  docgraph-tool-contract.md  logging.md  proposal-format.md  retrieval-flow.md  sqlite-schema.md  stale-handling.md
examples/: docgraph.config.yaml
src/docgraph_mcp/: __init__.py  backend.py  config.py  logging_utils.py  mcp_logging.py  models.py  mutation_flow.py  read_server.py  relink_flow.py  retrieval_flow.py  retrieval_types.py  server.py  server_runtime.py  source_ingest.py  visibility_policy.py  write_server.py
tests/: dual_reranker_stages.py  evidence_recommendation_candidates.py  gui_inspection_workflows.py  gui_live_retrieval.py  gui_pyqt6_path_detection.py  local_model_path_resolution.py  logging_lifecycle.py  mock_semantic_reranker.py  mutation_schema_aliases.py  python_compatibility.py  retrieval_modes_models_logging.py  retrieval_refactor_guards.py  search_anchor_ranking.py  search_fts_render_validation.py  semantic_anchor_promotion_mix.py  semantic_incremental_embedding_cache.py  shared_visibility.py  smoke_docgraph_sqlite_lifecycle.py  source_ingest_safeguards.py  stale_evidence_relink_suggestions.py  stress_fetch_timing_context_curator.py  write_response_shapes.py
tools/: docgraph_cli.py  docgraph_gui.py  docgraph_gui_pyqt6.py  docgraph_query.py
